k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kotvim-code
  labels:
    app: kotvim-code
