k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kotvim-code
  namespace: kotvim-code
  labels:
    app: kotvim-code
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: kotvim-code
