k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kotvim-code
  namespace: kotvim-code
  labels:
    app: kotvim-code
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - kotvim-code.luposec.io
      secretName: kotvim-code-tls
  rules:
    - host: kotvim-code.luposec.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kotvim-code
                port:
                  number: 80
